<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.EditAdsAct">

    <ScrollView
        android:id="@+id/ScrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/tvImageCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:padding="5dp"
                        android:text="1/3"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/vpimages"
                        app:layout_constraintEnd_toEndOf="@+id/vpimages" />

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vpimages"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0">

                    </androidx.viewpager2.widget.ViewPager2>

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/edit_image_button"
                        android:onClick="onClickGetImage"
                        android:padding="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/vpimages"
                        app:srcCompat="@drawable/ic_edit_pen" />

                    <ProgressBar
                        android:id="@+id/pBarLoad"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/vpimages"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/vpimages" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAdress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCoutry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Country"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCountry"
                        android:padding="10dp"
                        android:text="@string/selrct_country"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/City"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCity"
                        android:padding="10dp"
                        android:text="@string/selrct_city"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleTel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/Tel"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/Tel_number"
                        android:inputType="number"
                        android:textColorHint="@color/grey_dark" />

                    <TextView
                        android:id="@+id/tvTitleEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/email_hint"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/grey_dark" />

                    <LinearLayout
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/Index"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/Index"
                        android:inputType="number"
                        android:textColorHint="@color/grey_dark" />

                    <LinearLayout
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleIndex2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/send"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/checkBoxWithSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/with_send" />

                    <LinearLayout
                        android:id="@+id/divider5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/category"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickSelectCat"
                        android:padding="10dp"
                        android:text="@string/select_category"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/divider01"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/title"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/title_hint"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/grey_dark" />

                    <TextView
                        android:id="@+id/tvTitlePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/price"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/price_hint"
                        android:inputType="number"
                        android:textColorHint="@color/grey_dark" />

                    <LinearLayout
                        android:id="@+id/divider02"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/description"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/description_hint"
                        android:textColorHint="@color/grey_dark" />

                    <LinearLayout
                        android:id="@+id/divider03"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btPublish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="onClickPublish"
                android:text="@string/publish"
                android:textColor="@color/green_main"
                app:backgroundTint="@color/white" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>